--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-stack-policy-by-resource-type",
   "version": "0.1.0",
   "description": "Serverless Framework plugin for automatically populating CloudFormation stack policy statements by resource type.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "deploy": "publish",
     "test": "echo \"Error: no test specified\" && exit 1"
