--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "deploy": "publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ignore-pattern .gitignore **/*.js",
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "posttest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,8 @@
   },
   "homepage": "https://github.com/neverendingqs/serverless-stack-policy-by-resource-type#readme",
   "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-plugin-mocha": "^8.0.0",
     "publish-me-maybe": "^1.0.7"
   }
 }
