--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
     steps:
       - *attach_workspace
       - run: npm run test
+      - run: npm run test:coverage
 
   deploy:
     executor: node
