--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "publish-me-maybe": "^1.0.7",
-    "sinon": "^9.2.1"
+    "sinon": "^9.2.1",
+    "sinon-chai": "^3.5.0"
   }
 }
