--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,4 +6,8 @@ extends: eslint:recommended
 parserOptions:
   ecmaVersion: 12
 rules:
+  quotes:
+    - error
+    - single
+    - avoidEscape: true
   semi: error
